FM: + added disabled on button

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div class="advice-divider">
         <img src="./images/pattern-divider-desktop.svg" alt="divider" />
       </div>
-      <div class="advice-button" id="advice-button">
+      <button class="advice-button" id="advice-button">
         <img src="./images/icon-dice.svg" alt="Dice" class="dice-icon" />
-      </div>
+      </button>
     </div>
     <script defer src="./src/index.js"></script>
   </body>
